hphp/test/zend/good/ext/xsl/tests/bug48221.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded('xsl')) die("skip Extension XSL is required\n");
}
