hphp/test/zend/bad/ext/phar/tests/phar_oo_009.php.skipif
<?php if (!extension_loaded('phar')) die('skip'); ?>
<?php if (!defined('SplFileObject::READ_CSV') || !defined('SplFileObject::SKIP_EMPTY')) die('skip newer SPL version is required'); ?>